correction alignement image intro

--- a/styles.less
+++ b/styles.less
@@ -66,6 +66,7 @@ body {
                             height:100%;
                             width:100%;
                             display:block;
+                            text-align:center;
                         }
 			.pictBG {
 				cursor:pointer;
